# Projet_long_3DGS_Rust_WebGPU

./: .gitignore  README.md
Learning/: README.md
Learning/gsplat_rust_candle/: Cargo.toml  README.md  build.rs
Learning/gsplat_rust_candle/src/: lib.rs  main.rs  project_gaussians.rs  rasterize.rs  sh.rs  trainer.rs  utils.rs
Learning/gsplat_rust_candle/src/cuda/: bindings.rs  cuda_kernels.rs  customop.rs  mod.rs
Learning/gsplat_rust_candle/src/cuda/kernels/: backward.cu  backward.cuh  bindings.cu  forward.cu  forward.cuh  helpers.cuh  sh.cu
Renderer/: Cargo.toml  README.md
Renderer/examples/: application_framework.rs  read_cam.rs  rendu_image.rs  showcase.rs
Renderer/simple_render/src/: lib.rs  main.rs  shader.wgsl
Renderer/src/: renderer.rs  scene.rs  shaders.wgsl  utils.rs
Renderer/test/: Cargo.toml
Renderer/test/src/: lib.rs  shader.wgsl
