[package]
name = "gsplat_rust_candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/jeanfelixM/candle.git", version = "0.4.0", features = ["cuda"] }
candle-nn = { git = "https://github.com/jeanfelixM/candle.git", version = "0.4.0" }
image = "0.24.9"
num = "0.4.1"


[build-dependencies]
cxx-build = "1.0"
bindgen_cuda = "0.1.1"
anyhow = { version = "1", features = ["backtrace"] }


[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]